# Project-Group7

./: README.md  Recognation.cpp  dbconnection.cpp  dbconnection.h  motorLast.c
Client/: Command.h  main.cpp
Crop_FaceDetection/: Source.cpp
Detect_differentColors_object/: Detect_differentColors_object.sln
Detect_differentColors_object/FindDistance/: FindDistance.vcxproj  Source.cpp
Detect_with_ColorDifference/: CMakeLists.txt  Makefile  fileContent.cpp  fileContent.h  main.cpp
Linux:WindowsClient/: CMakeLists.txt  Client.cpp  MatConverter.cpp  MatConverter.h  Networkable.cpp  Networkable.h  main.cpp  wrestart.h
Motor/: CMakeLists.txt  Motor.cpp  Motor.h  main.cpp
Realtime webcam streaming/: README.txt
Realtime webcam streaming v2 (revised OOP Server:Client)/Client/: CMakeLists.txt  Client.cpp  Client.h  Networkable.cpp  Networkable.h  main.cpp
Realtime webcam streaming v2 (revised OOP Server:Client)/Server/: CMakeLists.txt  Networkable.cpp  Networkable.h  main.cpp  makefile
Realtime webcam streaming/Client/: main.cpp  uici.c
Realtime webcam streaming/Server/: main.cpp  makefile
RecognitionModule/: CMakeLists.txt  Detected.cpp  Detected.h  Makefile  Recognation.cpp  Recognation.h  main.cpp  variables.h
Server/: CMakeLists.txt  Command.h  Networkable.cpp  Networkable.h  Server.h  main.cpp  makefile
Server-Client-v3/Client/: CMakeLists.txt  Client.h  main.cpp  makefile
Server-Client-v3/Linux:WindowsClient/: CMakeLists.txt  Networkable.cpp  Networkable.h  main.cpp  wrestart.cpp
Server-Client-v3/Linux_WindowsClient/: Client.h  main.cpp
Server-Client-v3/Server/: CMakeLists.txt  MatConverter.h  Server.h  main.cpp
Server/image/: Detected.h
Test_SVM/: ReadMe.md  Source.cpp
Train a model/: README.md  Source.cpp  cars.txt  dumps.txt
UpperBody/: CMakeLists.txt  main.cpp
projeGui(Qt Creator Ubuntu) v2 (including live stream)/build-proje_gui/: Makefile  moc_mainwindow.cpp  moc_qcustomplot.cpp  moc_secondwindow.cpp  qrc_recources.cpp  ui_bolgeekle.h  ui_graphs.h  ui_secondwindow.h
projeGui(Qt Creator Ubuntu) v2 (including live stream)/build-proje_gui-Desktop-Debug/: Makefile  moc_bolgeekle.cpp  moc_secondwindow.cpp  proje_gui  qrc_recources.cpp  qrc_resources.cpp  ui_bolgeekle.h  ui_mainwindow.h  ui_secondwindow.h
projeGui(Qt Creator Ubuntu) v2 (including live stream)/proje_gui/: bolgeekle.cpp  bolgeekle.h  bolgeekle.ui  dbconnection.h  graphs.h  graphs.ui  main.cpp  mainwindow.h  proje_gui.pro  proje_gui.pro.user.668515e  proje_gui.pro.user.8849b67  secondwindow.cpp  secondwindow.h  secondwindow.ui
projeGui(Qt Creator Ubuntu) v2 (including live stream)/proje_gui/Server/: CMakeLists.txt  MatConverter.h  Networkable.cpp  Networkable.h  Server.cpp  Server.h  exe  main.cpp  makefile
projeGui(Qt Creator Ubuntu)/Server/: CMakeLists.txt  Data.h  exe
projeGui(Qt Creator Ubuntu)/Server/db/: dbconnection.cpp  dbconnection.h
projeGui(Qt Creator Ubuntu)/Server/image/: Recognation.cpp  Recognation.h
projeGui(Qt Creator Ubuntu)/Server/motor/: Motor.cpp  MotorException.h
projeGui(Qt Creator Ubuntu)/Server/supporting/: restart.c  uici.c  uiciname.c
projeGui(Qt Creator Ubuntu)/build-proje_gui-Desktop-Debug/: Makefile  moc_mainwindow.cpp  moc_secondwindow.cpp  proje_gui  ui_secondwindow.h
projeGui(Qt Creator Ubuntu)/build-proje_gui-Desktop_Qt_5_7_1_GCC_64bit-Debug/: Makefile  moc_bolgeekle.cpp  moc_editregion.cpp  moc_graphs.cpp  moc_secondwindow.cpp  qrc_recources.cpp  ui_editregion.h  ui_mainwindow.h  ui_secondwindow.h
projeGui(Qt Creator Ubuntu)/proje_gui/: Makefile  bolgeekle.cpp  bolgeekle.h  dbconnection.cpp  dbconnection.h  detectedimage.cpp  detectedimage.ui  editregion.h  graphs.cpp  graphs.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  proje_gui.pro  proje_gui.pro.user.8849b67  proje_gui.pro.user.b0e0080  recources.qrc  region.h  resources.qrc  secondwindow.cpp  secondwindow.h  secondwindow.ui
proje_gui/: Makefile  dbconnection.cpp  dbconnection.h  detectedimage.ui  editregion.cpp  main.cpp  proje_gui.pro  rapor.cpp  rapor.h  secondwindow.cpp  secondwindow.ui
proje_gui/Client/: MatConverter.cpp  Networkable.h
proje_gui_windows/: bolgeekle.cpp  dbconnection.h  detectedimage.h  graphs.cpp  graphs.ui  main.cpp  mainwindow.cpp  proje_gui.pro  secondwindow.cpp  secondwindow.h  secondwindow.ui
project_gui_windows/: bolgeekle.cpp  bolgeekle.h  bolgeekle.ui  form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project_gui_windows.pro  resources.qrc  secondwindow.cpp  secondwindow.h  secondwindow.ui
upperbodyDetection/: upperBody.cpp
(+57 files in other folders)
